# Umbra

./: Cargo.toml  LICENSE-SREL  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
def/: com.def  dwmapi.def  uxtheme.def
src/: codec.rs  com.rs  config.rs  config_payload.rs  debug_logger.rs  dualview.rs  fake_imports.rs  hash.rs  lib.rs  nt.rs  obfuscation.rs  payload.rs  pe.rs  proxy_exports.rs  resolver.rs  ssn_resolver.rs  stack_spoof.rs  syscalls.rs  threadpool.rs  timer_sleep.rs  utils.rs
